kube-pod/kube-pod-deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - http:
        paths:
          - path: /pod1
            backend:
              serviceName: kube-pod
              servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kube-pod
  namespace: default
spec:
  selector:
    app: kube-pod
  ports:
    - protocol: TCP
      port: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-pod
  namespace: default
spec:
  selector:
    matchLabels:
      app: kube-pod
      tier: kube
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-pod
        tier: kube
    spec:
      containers:
        - name: kube-pod
          image: jvaca92/kube-pod:latest
          command: ["java", "-Djava.securty.egd=file:/dev/./urandom", "-jar", "/maven/kube-pod-1.0-SNAPSHOT.jar"]
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
